last fixes before push

--- a/ASM/Colleen/Makefile
+++ b/ASM/Colleen/Makefile
@@ -10,10 +10,7 @@ OUTPUT = tmp
 	${CC} ${CFLAGS} $< -o $@
 
 ${TARGET}: ${OBJ}
-	gcc $< -o $@
-
-test: ${TARGET}
-	./${TARGET} > ${OUTPUT} && diff -u ${OUTPUT} ${SRC}
+	gcc $< -o $@ -Wl,-no_pie
 
 all: ${TARGET}
 
